2.3.0	
	- added the Implicit SPH Formulation for Incompressible Linearly Elastic Solids of Peer et al. 2017
	- added Corotated SPH for deformable solids of Becker et al. 2009
	- SPlisHSPlasH now supports 2D simulations
	- SPlisHSPlasH now has enhanced particle coloring
	- partio export of arbitrary particle attributes is now supported
	- renamed Static/DynamicBoundaryDemo to Static/DynamicBoundarySimulator
	- added documentation of file format
	- added colormaps
	- fixed race condition
	- fixed single precision build
	- updated PositionBasedDynamics

2.2.0
	- added support for multi-phase simulations

2.1.0	
	- added implicit viscosity computation of Weiler et al. 2018
	- added implicit viscosity computation of Takahashi et al. 2015
	- significantly improved performance of Projective Fluids
	- added counting class

2.0.0
	- the parameters of all methods are now handled by the library GenericParameters
	- the GUI is automatically generated using the information of the generic parameters
	- updated PositionBasedDynamics library which now supports arbitrary rigid body collisions
	- added Logger
	

1.3.1	
	- added implicit viscosity computation of Peer and Teschner 2016
	- fixed drag force computation of Gissler et al. 2017

1.3.0	
	- added implicit viscosity computation of Peer et al. 2015
	- SPlisHSPlasH now uses MD5 hashes to verify that cache files are valid
	- added volume sampling tool
	- cleanup fluid model
	- added drag force computation of Gissler et al. 2017
	- added drag force computation of Macklin et al. 2014
	- bugfixes

1.2.0
	- added micropolar model for turbulent fluids (Bender et al., "A Micropolar Material Model for Turbulent SPH Fluids", ACM SIGGRAPH/EUROGRAPHICS Symposium on Computer Animation, 2017)
	- added vorticity confinement method
	- added fluid emitters
	- added partio export for fluid simulations
	- updated to Eigen 3.3.4
	- bugfixes

1.1.0
	- added new scenes